# IT-ARHITEKTURE

./: .gitignore  README.md  process_data.ipynb  pyproject.toml
.github/workflows/: ci.yml
data/processed/: DVORANA_TABOR.csv  EUROPARK_-_POBREŠKA_C..csv  GORKEGA_UL._-_OŠ_FRANCETA_PREŠERNA.csv  GOSPOSVETSKA_C._-_III._GIMNAZIJA.csv  GOSPOSVETSKA_C._-_TURNERJEVA_UL..csv  GOSPOSVETSKA_C._-_VRBANSKA_C..csv  JHMB_–_DVOETAŽNI_MOST.csv  KOROŠKA_C._-_KOROŠKI_VETER.csv  LIDL_-_KOROŠKA_C..csv  LIDL_-_TITOVA_C..csv  LJUBLJANSKA_UL._-_FOCHEVA.csv  LJUBLJANSKA_UL._-_II._GIMNAZIJA.csv  MLADINSKA_UL._-_TRUBARJEVA_UL..csv  MLINSKA_UL_._-_AVTOBUSNA_POSTAJA.csv  NA_POLJANAH_-_HEROJA_ŠERCERJA.csv  NICEHASH_-_C._PROLETARSKIH_BRIGAD.csv  NKBM_-_TRG_LEONA_ŠTUKLJA.csv  PARTIZANSKA_C._-_CANKARJEVA_UL..csv  PARTIZANSKA_C._-_TIC.csv  PARTIZANSKA_C._-_ŽELEZNIŠKA_POSTAJA.csv  PETROL_–_LENT_–_VODNI_STOLP.csv  POŠTA_-_SLOMŠKOV_TRG.csv  RAZLAGOVA_UL._-_OBČINA.csv  SPAR_-_TRŽNICA_TABOR.csv  STROSSMAYERJEVA_UL._-_TRŽNICA.csv  TELEMACH_-_GLAVNI_TRG_-_STARI_PERON.csv  ULICA_MOŠE_PIJADA_-_UKC.csv  UM_FGPA_-_LENT_-_SODNI_STOLP.csv  VZAJEMNA,_VARUH_ZDRAVJA_-_BETNAVSKA_C..csv
data/raw/: fetch_mbajk.csv  processed_mbajk_20240310_220810.csv  processed_mbajk_20240310_221144.csv
models/: base_data_model.h5
notebooks/: fetchData.ipynb  fetchDataOneFile.ipynb  processData.ipynb  processDataAllFiles.ipynb  server.ipynb  train_mode.ipynb
notebooks/.ipynb_checkpoints/: fetchData-checkpoint.ipynb
reports/: metrics.txt  train_metrics.txt
src/data/: fetch_data.py  process_data.py
src/models/: train_model.py
(+2 files in other folders)
